# wxauto4

./: .gitignore  README.md  demo.py  pyproject.toml
wxauto4/: __init__.py  __main__.py  exceptions.py  languages.py  logger.py  moment.py  param.py  wx.py
wxauto4/msgs/: __init__.py  base.py  friend.py  mattr.py  msg.py  mtype.py  parse.py  self.py
wxauto4/ui/: __init__.py  base.py  chatbox.py  component.py  main.py  navigationbox.py  sessionbox.py
wxauto4/uia/: uiautomation.py
wxauto4/utils/: __init__.py  lock.py  tools.py  useful.py  win32.py
